# linoss-dynamics

./: .gitignore  AGENTS.md  CHANGELOG.md  CITATION.cff  CLAIMS.md  CONTRIBUTING.md  LICENSE  PROVENANCE.md  README.md  SECURITY.md  WORKFLOW.md  linOss-dynamics-walkthrough  pyproject.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  publish.yml
docs/: api.md  architecture.md  heredoc-context.md  release-checklist.md  roadmap.md
examples/: 01_single_step.py  02_forced.py  03_damped.py  04_energy.py  05_convergence.py  06_validation_errors.py  07_sunspots.py  08_phase_tracking.py  README.md
src/linoss_dynamics/: __init__.py  continuous.py  discretize.py  filters.py  fit.py  solver.py  stability.py
tests/: test_continuous.py  test_discretize.py  test_filters.py  test_fit.py  test_solver.py  test_stability.py
