[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "linoss-dynamics"
version = "0.1.0.dev0"
description = "Small NumPy runtime helpers for LinOSS-style oscillator dynamics with explicit damping."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
keywords = ["linoss", "state-space-models", "oscillator", "dynamics", "numpy"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Mathematics",
]
dependencies = [
    "numpy>=1.24",
]

[project.optional-dependencies]
test = [
    "pytest>=7.4",
    "ruff>=0.4",
]

[project.urls]
Homepage = "https://github.com/bionicbutterfly13/linoss-dynamics"
Source = "https://github.com/bionicbutterfly13/linoss-dynamics"
Issues = "https://github.com/bionicbutterfly13/linoss-dynamics/issues"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"
pythonpath = ["src"]
